# poc-rust-lambda

./: Cargo.toml  README.md
src/: main.rs
